# password_strength_checker

./: .gitignore  Makefile  policy.json  pyproject.toml
src/password_strength_checker/cli/: main.py
src/password_strength_checker/core/: estimates.py  evaluate.py  models.py  policy.py  scoring.py
src/password_strength_checker/core/rules/: banned.py  base.py  charset.py  dictionary.py  length.py  repeats.py  sequences.py
src/password_strength_checker/data/: common_passwords.txt
src/password_strength_checker/ui/: app.py
tests/: test_basic.py  test_estimates.py
