[project]
name = "password-strength-checker"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "password_strength_checker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.12,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pyinstaller (>=6.18.0,<7.0.0)",
    "pyinstaller-hooks-contrib (>=2025.11,<2026.0)"
]

[tool.poetry.scripts]
psc = "password_strength_checker.cli.main:main"
psc-ui = "password_strength_checker.ui.app:main"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

